Fixed browser compatibility title spacing and font

--- a/css/style.css
+++ b/css/style.css
@@ -175,21 +175,22 @@ hr.star-primary:after {
 }
 @font-face {
     font-family: 'Mrs Sheppards';
-    src: url(); 
+    src: url('http://fonts.googleapis.com/css?family=Mrs+Sheppards'); 
     font-weight: normal;
     font-style: normal;
+    -webkit-font-smoothing: antialiased;
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
 }
 .navbar-brand {
     font-size: 2.8em!important;
-    font-weight: 100!important;
+    /* font-weight: 100!important; */
     text-transform: capitalize!important;
     color: #222!important;
     position: relative;
     font-family: 'Mrs Sheppards', cursive!important;
     right: -25px;
-    -webkit-font-smoothing: antialiased;
-    font-synthesis: none;
-    text-rendering: optimizeLegibility;
+    
 }
 .navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
     color: #111!important;
